Fix for the workbench wrong background color in dark mode

--- a/app/base/static/assets/css/grepmarx-workbench.css
+++ b/app/base/static/assets/css/grepmarx-workbench.css
@@ -62,6 +62,10 @@ html {
     background: #f4f6f9;
 }
 
+.dark-mode .split-bottom {
+    background: #454d55;
+}
+
 /* ------------ Workbench styles */
 
 /* Normalize font size for highligthed source code */ 
